	  a more modular fashion. The object replacement and IO is now
	  responsibility of the storage directory, and not of the storage
	  manager.
	- Fixed a bogous MD5 mismatch warning sometimes seen when using
	  aufs or diskd stores
	- Added --enable-stacktraces configure option to set PRINT_STACK_TRACE,
	  and extended support for this to Linux/GNU libc.

Changes to Squid-2.4.DEVEL3 ():

	- Added Logfile module.
	- Added DISKD stats via cachemgr.
	- Added squid.conf options for DISKD magic constants.

Changes to Squid-2.4.DEVEL2 (Feb 29, 2000):

Changes to Squid-2.4.DEVEL1 ():

Changes to Squid-2.3.STABLE3 (May 15, 2000):

	- Fixed malloc linking problems on Solaris.  The configure
	  script incorrectly set options for dlmalloc.
	- Added a configure check to remove compiler optimization
	  for GCC 2.95.x.
	- Updated MSNT authenticator module.
	- Updated Estonian error pages.
	- Updated Japanese error pages.
	- Fixed expires bug in httpReplyHdrCacheInit.  It was
	  incorrectly setting expires based on max-age.  It was using
	  the current time as a basis, instead of the response date.
	- Fixed "USE_DNSSERVER" typos.
	- Added a workaround for getpwnam() problems on Solaris.
	  getpwnam() could fail if there are fewer than 256 FDs
	  available.  This causes root to own some disk files.
	- Added an 'offline_toggle' option via the cache manager.
	- Added a 'minimum_object_size' option.  Files smaller than
	  this size are not stored.
	- Added 'passive_ftp' option to disable passive FTP transfers.
	- Added 'wccp_version' option because some Cisco IOS versions
	  require WCCP version 3.
	- The 'client' program in ping mode (-g) now prints transfer
	  throughput.
	- Fixed logging of proxy auth username for redirected
	  requests.
	- Fixed bogus Age values for IMS requests.
	- Fixed persistent connection timeout for client-side
	  connections.  It was hard-coded to 15 seconds, now uses
	  the 'pconn_timeout' value.
	- Fixed up httpAcceptDefer.  It wasn't being used properly